--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
+cffi==1.14.5
 click==8.0.1
+cryptography==3.4.7
 cycler==0.10.0
+dataclasses==0.8
 Flask==2.0.1
 greenlet==1.1.0
 importlib-metadata==4.5.0
@@ -12,6 +15,7 @@ numpy==1.19.5
 pandas==1.1.5
 Pillow==8.2.0
 pkg-resources==0.0.0
+pycparser==2.20
 PyMySQL==1.0.2
 pyparsing==2.4.7
 python-dateutil==2.8.1
